# drf-api-permissions-postgres

./: docker-compose.yml  manage.py  pyproject.toml  requirements.txt
books/: permissions.py  urls.py  views.py
booksapi/: asgi.py  settings.py  urls.py  wsgi.py
